plugins/flutter/pocketpy/lib/pocketpy_bindings_generated.dart


  /// Call a callable object via pocketpy's calling convention.
  /// You need to prepare the stack using this form: `callable, self/nil, arg1, arg2, ..., k1, v1, k2, v2, ...`
  /// `argc` is the number of positional arguments excluding `self`.
  /// `kwargc` is the number of keyword arguments, i.e. the number of key-value pairs.
  /// The result will be set to `py_retval()`.
  /// The stack size will be reduced by `2 + argc + kwargc * 2`.
  bool py_vectorcall(
    int argc,
    int kwargc,
  ) {
    return _py_vectorcall(
      argc,
      kwargc,
    );
  }

  late final _py_vectorcallPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Uint16, ffi.Uint16)>>(
          'py_vectorcall');
  late final _py_vectorcall =
      _py_vectorcallPtr.asFunction<bool Function(int, int)>();

  /// Evaluate an expression and push the result to the stack.
  /// This function is used for testing.
  bool py_pusheval(
    ffi.Pointer<ffi.Char> expr,
    py_GlobalRef module,
  ) {
    return _py_pusheval(
      expr,
      module,
    );
  }

  late final _py_pushevalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              ffi.Pointer<ffi.Char>, py_GlobalRef)>>('py_pusheval');
  late final _py_pusheval = _py_pushevalPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Char>, py_GlobalRef)>();

  /// Create a new module.
  py_GlobalRef py_newmodule(
    ffi.Pointer<ffi.Char> path,
  ) {
    return _py_newmodule(
      path,
    );
  }

  late final _py_newmodulePtr =
      _lookup<ffi.NativeFunction<py_GlobalRef Function(ffi.Pointer<ffi.Char>)>>(
          'py_newmodule');
  late final _py_newmodule = _py_newmodulePtr
      .asFunction<py_GlobalRef Function(ffi.Pointer<ffi.Char>)>();

  /// Get a module by path.
  py_GlobalRef py_getmodule(
    ffi.Pointer<ffi.Char> path,
  ) {
    return _py_getmodule(
      path,
    );
  }

  late final _py_getmodulePtr =
      _lookup<ffi.NativeFunction<py_GlobalRef Function(ffi.Pointer<ffi.Char>)>>(
          'py_getmodule');
  late final _py_getmodule = _py_getmodulePtr
      .asFunction<py_GlobalRef Function(ffi.Pointer<ffi.Char>)>();

  /// Reload an existing module.
  bool py_importlib_reload(
    py_GlobalRef module,
  ) {
    return _py_importlib_reload(
      module,
    );
  }

  late final _py_importlib_reloadPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_GlobalRef)>>(
          'py_importlib_reload');
  late final _py_importlib_reload =
      _py_importlib_reloadPtr.asFunction<bool Function(py_GlobalRef)>();

  /// Import a module.
  /// The result will be set to `py_retval()`.
  /// -1: error, 0: not found, 1: success
  int py_import(
    ffi.Pointer<ffi.Char> path,
  ) {
    return _py_import(
      path,
    );
  }

  late final _py_importPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'py_import');
  late final _py_import =
      _py_importPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// Raise an exception by type and message. Always return false.
  bool py_exception(
    int type,
    ffi.Pointer<ffi.Char> fmt,
  ) {
    return _py_exception(
      type,
      fmt,
    );
  }

  late final _py_exceptionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(py_Type, ffi.Pointer<ffi.Char>)>>('py_exception');
  late final _py_exception =
      _py_exceptionPtr.asFunction<bool Function(int, ffi.Pointer<ffi.Char>)>();

  /// Raise an expection object. Always return false.
  bool py_raise(
    py_Ref arg0,
  ) {
    return _py_raise(
      arg0,
    );
  }

  late final _py_raisePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref)>>('py_raise');
  late final _py_raise = _py_raisePtr.asFunction<bool Function(py_Ref)>();

  /// Print the current exception.
  /// The exception will be set as handled.
  void py_printexc() {
    return _py_printexc();
  }

  late final _py_printexcPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('py_printexc');
  late final _py_printexc = _py_printexcPtr.asFunction<void Function()>();

  /// Format the current exception and return a null-terminated string.
  /// The result should be freed by the caller.
  /// The exception will be set as handled.
  ffi.Pointer<ffi.Char> py_formatexc() {
    return _py_formatexc();
  }

  late final _py_formatexcPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'py_formatexc');
  late final _py_formatexc =
      _py_formatexcPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Check if an exception is raised.
  bool py_checkexc(
    bool ignore_handled,
  ) {
    return _py_checkexc(
      ignore_handled,
    );
  }

  late final _py_checkexcPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Bool)>>('py_checkexc');
  late final _py_checkexc = _py_checkexcPtr.asFunction<bool Function(bool)>();

  /// Check if the exception is an instance of the given type.
  /// This function is roughly equivalent to python's `except <T> as e:` block.
  /// If match, the exception will be stored in `py_retval()` as handled.
  bool py_matchexc(
    int type,
  ) {
    return _py_matchexc(
      type,
    );
  }

  late final _py_matchexcPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Type)>>('py_matchexc');
  late final _py_matchexc = _py_matchexcPtr.asFunction<bool Function(int)>();

  /// Clear the current exception.
  /// @param p0 the unwinding point. Use `NULL` if not needed.
  void py_clearexc(
    py_StackRef p0,
  ) {
    return _py_clearexc(
      p0,
    );
  }

  late final _py_clearexcPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_StackRef)>>(
          'py_clearexc');
  late final _py_clearexc =
      _py_clearexcPtr.asFunction<void Function(py_StackRef)>();

  bool StopIteration() {
    return _StopIteration();
  }

  late final _StopIterationPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>('StopIteration');
  late final _StopIteration = _StopIterationPtr.asFunction<bool Function()>();

  bool KeyError(
    py_Ref key,
  ) {
    return _KeyError(
      key,
    );
  }

  late final _KeyErrorPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref)>>('KeyError');
  late final _KeyError = _KeyErrorPtr.asFunction<bool Function(py_Ref)>();

  /// Python equivalent to `bool(val)`.
  /// 1: true, 0: false, -1: error
  int py_bool(
    py_Ref val,
  ) {
    return _py_bool(
      val,
    );
  }

  late final _py_boolPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(py_Ref)>>('py_bool');
  late final _py_bool = _py_boolPtr.asFunction<int Function(py_Ref)>();

  /// Compare two objects.
  /// 1: lhs == rhs, 0: lhs != rhs, -1: error
  int py_equal(
    py_Ref lhs,
    py_Ref rhs,
  ) {
    return _py_equal(
      lhs,
      rhs,
    );
  }

  late final _py_equalPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(py_Ref, py_Ref)>>('py_equal');
  late final _py_equal =
      _py_equalPtr.asFunction<int Function(py_Ref, py_Ref)>();

  /// Compare two objects.
  /// 1: lhs < rhs, 0: lhs >= rhs, -1: error
  int py_less(
    py_Ref lhs,
    py_Ref rhs,
  ) {
    return _py_less(
      lhs,
      rhs,
    );
  }

  late final _py_lessPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(py_Ref, py_Ref)>>('py_less');
  late final _py_less = _py_lessPtr.asFunction<int Function(py_Ref, py_Ref)>();

  /// Python equivalent to `callable(val)`.
  bool py_callable(
    py_Ref val,
  ) {
    return _py_callable(
      val,
    );
  }

  late final _py_callablePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref)>>('py_callable');
  late final _py_callable = _py_callablePtr.asFunction<bool Function(py_Ref)>();

  /// Get the hash value of the object.
  bool py_hash(
    py_Ref arg0,
    ffi.Pointer<py_i64> out,
  ) {
    return _py_hash(
      arg0,
      out,
    );
  }

  late final _py_hashPtr = _lookup<
          ffi.NativeFunction<ffi.Bool Function(py_Ref, ffi.Pointer<py_i64>)>>(
      'py_hash');
  late final _py_hash =
      _py_hashPtr.asFunction<bool Function(py_Ref, ffi.Pointer<py_i64>)>();

  /// Get the iterator of the object.
  bool py_iter(
    py_Ref arg0,
  ) {
    return _py_iter(
      arg0,
    );
  }

  late final _py_iterPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref)>>('py_iter');
  late final _py_iter = _py_iterPtr.asFunction<bool Function(py_Ref)>();

  /// Get the next element from the iterator.
  /// 1: success, 0: StopIteration, -1: error
  int py_next(
    py_Ref arg0,
  ) {
    return _py_next(
      arg0,
    );
  }

  late final _py_nextPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(py_Ref)>>('py_next');
  late final _py_next = _py_nextPtr.asFunction<int Function(py_Ref)>();

  /// Python equivalent to `lhs is rhs`.
  bool py_isidentical(
    py_Ref arg0,
    py_Ref arg1,
  ) {
    return _py_isidentical(
      arg0,
      arg1,
    );
  }

  late final _py_isidenticalPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref, py_Ref)>>(
          'py_isidentical');
  late final _py_isidentical =
      _py_isidenticalPtr.asFunction<bool Function(py_Ref, py_Ref)>();

  /// Call a function.
  /// It prepares the stack and then performs a `vectorcall(argc, 0, false)`.
  /// The result will be set to `py_retval()`.
  /// The stack remains unchanged after the operation.
  bool py_call(
    py_Ref f,
    int argc,
    py_Ref argv,
  ) {
    return _py_call(
      f,
      argc,
      argv,
    );
  }

  late final _py_callPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref, ffi.Int, py_Ref)>>(
          'py_call');
  late final _py_call =
      _py_callPtr.asFunction<bool Function(py_Ref, int, py_Ref)>();

  /// Call a `py_CFunction` in a safe way.
  /// This function does extra checks to help you debug `py_CFunction`.
  bool py_callcfunc(
    py_CFunction f,
    int argc,
    py_Ref argv,
  ) {
    return _py_callcfunc(
      f,
      argc,
      argv,
    );
  }

  late final _py_callcfuncPtr = _lookup<
          ffi.NativeFunction<ffi.Bool Function(py_CFunction, ffi.Int, py_Ref)>>(
      'py_callcfunc');
  late final _py_callcfunc =
      _py_callcfuncPtr.asFunction<bool Function(py_CFunction, int, py_Ref)>();

  /// Python equivalent to `str(val)`.
  bool py_str(
    py_Ref val,
  ) {
    return _py_str(
      val,
    );
  }

  late final _py_strPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref)>>('py_str');
  late final _py_str = _py_strPtr.asFunction<bool Function(py_Ref)>();

  /// Python equivalent to `repr(val)`.
  bool py_repr(
    py_Ref val,
  ) {
    return _py_repr(
      val,
    );
  }

  late final _py_reprPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref)>>('py_repr');
  late final _py_repr = _py_reprPtr.asFunction<bool Function(py_Ref)>();

  /// Python equivalent to `len(val)`.
  bool py_len(
    py_Ref val,
  ) {
    return _py_len(
      val,
    );
  }

  late final _py_lenPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref)>>('py_len');
  late final _py_len = _py_lenPtr.asFunction<bool Function(py_Ref)>();

  /// Python equivalent to `json.dumps(val)`.
  bool py_json_dumps(
    py_Ref val,
  ) {
    return _py_json_dumps(
      val,
    );
  }

  late final _py_json_dumpsPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref)>>('py_json_dumps');
  late final _py_json_dumps =
      _py_json_dumpsPtr.asFunction<bool Function(py_Ref)>();

  /// Python equivalent to `json.loads(val)`.
  bool py_json_loads(
    ffi.Pointer<ffi.Char> source,
  ) {
    return _py_json_loads(
      source,
    );
  }

  late final _py_json_loadsPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>)>>(
          'py_json_loads');
  late final _py_json_loads =
      _py_json_loadsPtr.asFunction<bool Function(ffi.Pointer<ffi.Char>)>();

  /// Python equivalent to `pickle.dumps(val)`.
  bool py_pickle_dumps(
    py_Ref val,
  ) {
    return _py_pickle_dumps(
      val,
    );
  }
